--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
   "name": "nuxt-app",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "node .output/server/index.mjs",
     "build": "nuxt build",
     "dev": "nuxt dev --trace-warnings",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest"
   },
   "devDependencies": {
     "@element-plus/nuxt": "^1.0.6",
     "@nuxt/devtools": "latest",
+    "@nuxt/test-utils": "^3.9.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
+    "@vue/test-utils": "^2.4.3",
     "autoprefixer": "^10.4.15",
+    "happy-dom": "^12.10.3",
     "nuxt": "^3.7.2",
+    "playwright-core": "^1.40.1",
     "postcss": "^8.4.29",
     "prisma": "^5.6.0",
     "tailwindcss": "^3.3.3",
-    "vitest": "^0.34.4"
+    "vitest": "^0.34.6"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
